Heavily improved Socials page and fixed some issues

--- a/projects.html
+++ b/projects.html
@@ -29,25 +29,9 @@
     <div id="page-wrapper">
       <div class="content-wrapper">
 <section class="projects">
-<br><br><br><br><br><br>
-<p class="generic-text-header">My Projects</p>
-<br><br>
-<p class="projects-subsection-h">Software</p>
-<br><br><br>
-<div class="project-wrapper">
-<p class="project-name">Charles</p><br>
-<p class="project-desc">Charles is a command line app I'm working on to learn the fundamentals of Go (golang).<br> It's purpose is to automate various tasks with one simple command.</p>
-<br>
-<a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
-</div><br><br><br>
-
-<div class="project-wrapper">
-  <p class="project-name">Go Clean Your Computer</p><br>
-  <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
-  <br>
-  <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
-</div><br><br><br>
-<!--<p class="projects-subsection-h">Games</p>-->
+  <br><br><br><br><br><br>
+  <p class="generic-text-header">My Projects</p>
+  <br><br>
 <p class="projects-subsection-h">Mods</p>
 <br><br><br>
 <div class="project-wrapper">
@@ -65,7 +49,7 @@
 </div><br><br><br>
 
 <div class="project-wrapper">
-<p class="project-name">SatisWHACKtory</p><br>
+<p class="project-name">SatisWHACK&shy<wbr>tory</p><br>
 <p class="project-desc">SatisWHACKtory is a mod for Satisfactory that adds some fun obstacles to the game to cause chaos in multiplayer sessions.</p>
 <br>
 <a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/ObstacleMod" class="download-link">Download</a>
@@ -81,14 +65,29 @@
     <p class="project-name">Better Grass</p><br>
     <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game.</p>
     <br>
-    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/BetterGrass" class="download-link">Download</a>
 </div><br><br><br>
   <div class="project-wrapper">
     <p class="project-name">2m Walls</p><br>
     <p class="project-desc">This is a mod for Satisfactory that gives you an extra wall size for quicker construction.</p>
     <br>
-    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/TwoMeterWalls" class="download-link">Download</a>
 </div><br><br><br>
+  <p class="projects-subsection-h">Software</p>
+  <br><br><br>
+  <div class="project-wrapper">
+    <p class="project-name">Charles</p><br>
+    <p class="project-desc">Charles is a command line app I'm working on to learn the fundamentals of Go (golang).<br> It's purpose is to automate various tasks with one simple command.</p>
+    <br>
+    <a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+  </div><br><br><br>
+
+  <div class="project-wrapper">
+    <p class="project-name">Go Clean Your Computer</p><br>
+    <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
+    <br>
+    <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+  </div><br><br><br>
 </section><br>
     </div>
     </div>
