--- a/socials.html
+++ b/socials.html
@@ -35,20 +35,80 @@
             <br><br><br><br><br><br>
             <p class="generic-text-header">My Socials</p>
             <br><br>
-            <div class="socials-links">
-                <a class="social-link" href="https://github.com/SpaceGameDev568"><img class="github-social-icon" src="https://assets.spacegamedev.com/images/logos/github.svg" alt="GitHub"><p class="social-link-label">GitHub</p></a>
+        <div class="flexbox">
+            <a class="social-card" href="https://github.com/SpaceGameDev568">
+                <img class="social-icon github" src="https://assets.spacegamedev.com/images/logos/github.svg" alt="GitHub">
+                <p class="social-name">GitHub</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">SpaceGameDev568</p>
+                <br>
+                <br>
+                <p class="social-description">GitHub is where I host all of my open-source code, including this website.</p>
+            </a>
 
-                <a class="social-link" href="linkedin.html"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/linkedin.webp" alt="LinkedIn"><p class="social-link-label">LinkedIn</p></a>
+            <a class="social-card" href="linkedin.html">
+                <img class="social-icon" src="https://assets.spacegamedev.com/images/logos/linkedin.webp" alt="LinkedIn">
+                <p class="social-name">LinkedIn</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">Jesse Hodgson</p>
+                <br>
+                <br>
+                <p class="social-description">LinkedIn is where I showcase all of my professional accomplishments and connect with people in the tech industry.</p>
+            </a>
 
-                <a class="social-link" href="https://youtube.com/@spacegamedev"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/youtube.webp" alt="YouTube"><p class="youtube-link-label">YouTube</p></a>
+            <a class="social-card" href="https://youtube.com/@spacegamedev">
+                <img class="social-icon" src="https://assets.spacegamedev.com/images/logos/youtube.webp" alt="YouTube">
+                <p class="social-name">YouTube</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">@spacegamedev</p>
+                <br>
+                <br>
+                <p class="social-description">YouTube is where I will occasionally post a video related to whatever I'm working on at the moment. I might do devlogs on here in the future though.</p>
+            </a>
 
-                <a class="social-link" href="https://steamcommunity.com/id/spacegamedev/"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/steam.webp" alt="Steam"><p class="social-link-label">Steam</p></a>
+            <a class="social-card" href="https://steamcommunity.com/id/spacegamedev/">
+                <img class="social-icon" src="https://assets.spacegamedev.com/images/logos/steam.webp" alt="Steam">
+                <p class="social-name">Steam</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">SpaceGameDev</p>
+                <br>
+                <br>
+                <p class="social-description">Steam is where I hang out and play games on PC.</p>
+            </a>
 
-                <a class="social-link" href="https://trello.com/u/spacegamedev568/activity"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/trello.webp" alt="Trello"><p class="social-link-label">Trello</p></a>
+            <a class="social-card" href="https://trello.com/u/spacegamedev568/activity">
+                <img class="social-icon" src="https://assets.spacegamedev.com/images/logos/trello.webp" alt="Trello">
+                <p class="social-name">Trello</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">spacegamedev568</p>
+                <br>
+                <br>
+                <p class="social-description">Trello is where I plan my projects, though most of my work on hobby projects is not formally planned ahead of time.</p>
+            </a>
 
-                <a class="social-link" href="https://ficsit.app/user/5GqLMHyzA3myPG"><img class="social-icon" src="https://assets.spacegamedev.com/images/logos/smr.webp" alt="SMR"><p class="social-link-label">SMR</p></a>
-            </div>
-            <br><br>
+            <a class="social-card" href="https://ficsit.app/user/5GqLMHyzA3myPG">
+                <img class="social-icon" src="https://assets.spacegamedev.com/images/logos/smr.webp" alt="SMR">
+                <p class="social-name">SMR</p>
+                <br>
+                <br>
+                <br>
+                <p class="social-username">SpaceGameDev</p>
+                <br>
+                <br>
+                <p class="social-description">The Satisfactory Mod Repository is where I publish all of my Satisfactory mods.</p>
+            </a>
+        </div>
+        <br>
     </div>
 </div>
 <section class="footer">
