--- a/support.html
+++ b/support.html
@@ -36,7 +36,11 @@
 <div class="content-wrapper">
 <section class="support"><br><br><br><br><br>
 <p class="generic-text-header">Support</p><br><br>
-    <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.</p>
+    <p class="text">If you need help with one of my Satisfactory mods please create an issue on the mod's GitHub page, a link to which can be found either on the mod's description page on <a class="standard-link" href="https://ficsit.app">ficsit.app</a>, or in the Satisfactory pause menu under: Mods -> {Mod Name} -> Get Support.</p>
+    <br><br>
+    <img class="satisfactory-help-image" alt="Satisfactory Help" src="https://spacegamedev-assets.pages.dev/images/webp/satisfactory-help.webp">
+    <br><br>
+    <p class="support-p">If you need help with one of my other projects, please submit a ticket through the support portal or send an email to me.</p>
     <br><br><br>
     <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
     <br><br>
