Updated page titles and descriptions

--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <title>Error 404 :(</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <meta http-equiv="Content-Language" content="en">
-    <meta name="description" content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist">
-    <meta name="SpaceGameDev's Website"/>
+    <meta name="description" content="Error 404 :( - SpaceGameDev's Website">
+    <meta name="Error 404 :( - SpaceGameDev's Website"/>
     <meta name="keywords" content="space,spacegamedev,gamedev,spacegamedev568" />
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="https://spacegamedev.com/css/main.css">
-    <link rel="stylesheet" href="https://spacegamedev.com/css/404.css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
+      <link rel="stylesheet" href="/css/pages/404.css" type="text/css">
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
   </head>
