--- a/socials.html
+++ b/socials.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <!-- Copyright (©) 2022 - 2024 Jesse Hodgson. All Rights Reserved -->
 <head>
-    <title>SpaceGameDev's Website</title>
+    <title>My Socials</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="en" http-equiv="Content-Language">
-    <meta content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and IT Support Specialist" name="description">
-    <meta name="SpaceGameDev's Website"/>
+    <meta content="My Socials - SpaceGameDev's Website" name="description">
+    <meta name="My Socials - SpaceGameDev's Website"/>
     <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp" rel="shortcut icon"
           type="image/ico"/>
