--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <!-- Copyright (©) 2022 - 2024 Jesse Hodgson. All Rights Reserved -->
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jesse Hodgson's personal projects.">
-    <title>SpaceGameDev's Website</title>
+    <title>My Projects</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="en" http-equiv="Content-Language">
+    <meta content="My Projects- SpaceGameDev's Website" name="description">
+    <meta name="My Projects - SpaceGameDev's Website"/>
+    <meta content="space,spacegamedev,gamedev,spacegamedev568" name="keywords"/>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/pages/projects.css">
