--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download the latest releases of SpaceGameDev Software.">
-    <title>SpaceGameDev's Website</title>
+    <title>SpaceGameDev Brand Resources</title>
     <link rel="shortcut icon" type="image/ico"
           href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
