--- a/support.html
+++ b/support.html
@@ -3,10 +3,10 @@
   <!-- Copyright (©) 2022 - 2024 Jesse Hodgson. All Rights Reserved -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get support for SpaceGameDev Software.">
-    <title>SpaceGameDev's Website</title>
+    <meta name="description" content="SpaceGameDev Support - SpaceGameDev's Website">
+    <title>SpaceGameDev Support</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="css\404.css">
     <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
     <link rel="stylesheet" href="css\pages/support.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
