--- a/elements/header.html
+++ b/elements/header.html
@@ -1,9 +1,9 @@
 <!--Header-->
 <!-- Auto detect OS theme -->
-<script src="js/autotheme.js" defer></script>
-<script defer src="js/toggletheme.js"></script>
+<script src="/js/autotheme.js" defer></script>
+<script defer src="/js/toggletheme.js"></script>
 <!-- Sidebar function -->
-<script src="js/sidebar.js" defer></script>
+<script src="/js/sidebar.js" defer></script>
 <div class="header" id="header">
 
     <button class="openbtn" onclick="openNav()" title="Navigation"><img
