Fixes for broken stuff

--- a/elements/header.html
+++ b/elements/header.html
@@ -1,6 +1,5 @@
 <!--Header-->
-<!-- Auto detect OS theme -->
-<script src="/js/autotheme.js" defer></script>
+
 <script defer src="/js/toggletheme.js"></script>
 <!-- Sidebar function -->
 <script src="/js/sidebar.js" defer></script>
@@ -12,8 +11,7 @@
 
     <img alt="" class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp">
 
-    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
-    </button>
+    <button class="btn-toggle" onclick="changeTheme()" title="Switch themes"><img class="theme-icon-light" src="https://spacegamedev-assets.pages.dev/images/ui/light-theme.svg" alt="Toggle Light or Dark Theme"><img class="theme-icon-dark" src="https://spacegamedev-assets.pages.dev/images/ui/dark-theme.svg" alt="Toggle Light or Dark Theme"></button>
 
 </div>
 <!-- Sidebar -->
