--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 <!-- End Head, Start Body -->
 <body>
+
 <script defer src="js/CommonElements.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
 <!-- Start Header Section -->
 <div data-include="header"></div>
