--- a/resources.html
+++ b/resources.html
@@ -18,6 +18,7 @@
 
 <script defer src="js/CommonElements.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <div data-include="header"></div>
 <div id="page-wrapper">
     <div class="content-wrapper">
