--- a/support.html
+++ b/support.html
@@ -23,6 +23,7 @@
 
     <script defer src="js/CommonElements.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Start Header Section -->
     <div data-include="header"></div>
     <!-- End Header Section-->
