--- a/support.html
+++ b/support.html
@@ -6,14 +6,10 @@
     <meta name="description" content="SpaceGameDev Support - SpaceGameDev's Website">
     <title>SpaceGameDev Support</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
-    <link rel="stylesheet" href="css\404.css">
-    <link href="https://assets.spacegamedev.com/css/fonts.css" rel="preload" as="style">
-    <link rel="stylesheet" href="css\pages/support.css">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/pages/404.css" rel="stylesheet">
+    <link href="/css/pages/support.css" rel="stylesheet">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
   </head>
   <!-- End Head, Start Body -->
   <body>
@@ -35,7 +31,7 @@
     <br><br>
     <img class="satisfactory-help-image" alt="Satisfactory Help" src="https://spacegamedev-assets.pages.dev/images/webp/satisfactory-help.webp">
     <br><br>
-    <p class="support-p">If you need help with one of my other projects, please submit a ticket through the support portal or send an email to me.</p>
+    <p class="support-p">If you need help with one of my other projects, please submit a ticket through the support portal or email me.</p>
     <br><br><br>
     <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
     <br><br>
