Improved projects page

--- a/projects.html
+++ b/projects.html
@@ -29,61 +29,101 @@
   <br><br><br><br><br><br>
   <p class="generic-text-header">My Projects</p>
   <br><br>
-<p class="projects-subsection-h">Mods</p>
+<p class="projects-subsection-h">Satisfactory Mods</p>
 <br><br><br>
+
 <div class="project-wrapper">
-<p class="project-name">Factory Props</p><br>
-<p class="project-desc">Factory Props is a mod for Satisfactory that repurposes assets from the game as decorative buildings.</p>
-<br>
-<a href="https://github.com/SpaceGameDev568/Factory_Prop_Mod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/Factory_Prop_Mod" class="download-link">Download</a>
+<img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/8ivr6Mvuv4sCkX/logo.webp" alt="Factory Props">
+  
+  <div class="project-text">
+    <p class="project-name">Factory Props</p><br>
+    <p class="project-desc">Factory Props repurposes assets from the game as decorative buildings.</p>
+  </div>
+<br><br><br>
+<a href="https://github.com/SpaceGameDev568/Factory_Prop_Mod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/Factory_Prop_Mod" class="download-link">ficsit.app</a>
 </div><br><br><br>
 
 <div class="project-wrapper">
-<p class="project-name">Remove All Annoyances</p><br>
-<p class="project-desc">Remove All Annoyances is a mod for Satisfactory that removes annoying things from the world.</p>
-<br>
-<a href="https://github.com/SpaceGameDev568/RemoveAllAnnoyances" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/RemoveAllAnnoyances" class="download-link">Download</a>
+  <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/FGnDVTV2ygmANY/logo.webp" alt="Remove All Annoyances">
+  <div class="project-text">
+    <p class="project-name">Remove All Annoyances</p><br>
+    <p class="project-desc">Remove All Annoyances removes annoying creatures and objects from the world.</p>
+   </div>
+<br><br><br>
+<a href="https://github.com/SpaceGameDev568/RemoveAllAnnoyances" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/RemoveAllAnnoyances" class="download-link">ficsit.app</a>
 </div><br><br><br>
 
 <div class="project-wrapper">
-<p class="project-name">SatisWHACK&shy<wbr>tory</p><br>
-<p class="project-desc">SatisWHACKtory is a mod for Satisfactory that adds some fun obstacles to the game to cause chaos in multiplayer sessions.</p>
-<br>
-<a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/ObstacleMod" class="download-link">Download</a>
+  <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/8XYLMRNbnfzc2G/logo.webp" alt="SatisWHACKtory">
+  <div class="project-text">
+    <p class="project-name">SatisWHACK&shy<wbr>tory</p><br>
+    <p class="project-desc">SatisWHACKtory adds some fun obstacles to the game to cause chaos in multiplayer sessions.</p>
+   </div>
+<br><br><br>
+<a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/ObstacleMod" class="download-link">ficsit.app</a>
 </div><br><br><br>
 
 <div class="project-wrapper">
-<p class="project-name">Satisfactory Discord Rich Presence</p><br>
-<p class="project-desc">This is a mod for Satisfactory that lets you see your Satisfactory presence info on your Discord profile.</p>
-<br>
-<a href="https://github.com/SpaceGameDev568/FG_DiscordRP" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/FG_DiscordRP" class="download-link">Download</a>
+  <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/2t2nCEBqMdUt1n/logo.webp" alt="Satisfactory Discord Rich Presence">
+  <div class="project-text">
+    <p class="project-name">Satisfactory Discord Rich Presence</p><br>
+    <p class="project-desc">This mod lets others see what you're doing in Satisfactory on your Discord profile.</p>
+  </div>
+<br><br><br>
+<a href="https://github.com/SpaceGameDev568/FG_DiscordRP" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/FG_DiscordRP" class="download-link">ficsit.app</a>
 </div><br><br><br>
   <div class="project-wrapper">
-    <p class="project-name">Better Grass</p><br>
-    <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game.</p>
-    <br>
-    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/BetterGrass" class="download-link">Download</a>
+    <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/4S2xwMEFdMKymS/logo.webp" alt="Better Grass">
+    <div class="project-text">
+      <p class="project-name">Better Grass</p><br>
+      <p class="project-desc">This mod lets you customize how the grass looks in-game.</p>
+      </div>
+    <br><br><br>
+    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/BetterGrass" class="download-link">ficsit.app</a>
 </div><br><br><br>
   <div class="project-wrapper">
+    <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/7NEYeWC3Mf5Rqa/logo.webp" alt="2m Walls">
+    <div class="project-text">
     <p class="project-name">2m Walls</p><br>
-    <p class="project-desc">This is a mod for Satisfactory that gives you an extra wall size for quicker construction.</p>
-    <br>
-    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/TwoMeterWalls" class="download-link">Download</a>
+    <p class="project-desc">This mod gives you an extra wall size for quicker construction.</p>
+    </div>
+    <br><br><br>
+    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/TwoMeterWalls" class="download-link">ficsit.app</a>
 </div><br><br><br>
-  <p class="projects-subsection-h">Software</p>
+
+  <div class="project-wrapper">
+    <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/CMA7t3H6L1dkWT/logo.webp" alt="More Players">
+    <div class="project-text">
+      <p class="project-name">More Players</p><br>
+      <p class="project-desc">This mod allows you to have more players in multiplayer sessions than the default limit of 4.</p>
+    </div>
+    <br><br><br>
+    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/TwoMeterWalls" class="download-link">ficsit.app</a>
+  </div><br><br><br>
+
+  <div class="project-wrapper">
+    <img class="project-image" src="https://storage.ficsit.app/file/smr-prod-s3/images/mods/8KzYMxowiUmKLn/logo.webp" alt="SpaceGameDev Mod Update Notifier">
+    <div class="project-text">
+      <p class="project-name">SpaceGameDev Mod Update Notifier</p><br>
+      <p class="project-desc">This mod will notify the player in-game when a new version of a mod is available.</p>
+    </div>
+    <br><br><br>
+    <a href="https://github.com/SpaceGameDev568/TwoMeterWalls" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/TwoMeterWalls" class="download-link">ficsit.app</a>
+  </div><br><br><br>
+  <p class="projects-subsection-h">Other Software</p>
   <br><br><br>
   <div class="project-wrapper">
     <p class="project-name">Charles</p><br>
     <p class="project-desc">Charles is a command line app I'm working on to learn the fundamentals of Go (golang).<br> It's purpose is to automate various tasks with one simple command.</p>
     <br>
-    <a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+    <a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a>
   </div><br><br><br>
 
   <div class="project-wrapper">
     <p class="project-name">Go Clean Your Computer</p><br>
     <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
     <br>
-    <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="resources.html" class="download-link">Download</a>
+    <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a>
   </div><br><br><br>
 </section><br>
     </div>
